<resources>
    <string name="app_name">Expenses</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="item_escritorio">Escritorio</string>
    <string name="item_transacciones">Transacciones</string>
    <string name="item_resumen">Resumen</string>
    <string name="item_informes">Informes</string>

    <string name="resumen_mensajeGasto">Muchos gastos en</string>

    <string name="mensaje_estadoCuenta">Balance</string>
    <string name="mensaje_saldo">$0,00</string>
    <string name="descripcion_app">DESCRIPCIÓN DE LA APLICACIÓN</string>
    <string name="title_activity_categorias">CategoriasActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="calculator_0">0</string>
    <string name="calculator_1">1</string>
    <string name="calculator_2">2</string>
    <string name="calculator_3">3</string>
    <string name="calculator_4">4</string>
    <string name="calculator_5">5</string>
    <string name="calculator_6">6</string>
    <string name="calculator_7">7</string>
    <string name="calculator_8">8</string>
    <string name="calculator_9">9</string>
    <string name="calculator_sum">+</string>
    <string name="calculator_sub">/</string>
    <string name="calculator_div">/</string>
    <string name="calculator_mul">*</string>
    <string name="calculator_eq">=</string>
    <string name="calculator_ce">CE</string>
    <string name="calculator_dot">,</string>
    <string name="currency">$</string>
    <string name="error">Error</string>

    <string name="string_user_handle">\@code_wizard</string>
    <string name="text_user_name">Thomas Kioko</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_bio">Gamer | Pianist | Mentor | Android Engineer | Introverted Coder turned stand-up chameleon</string>
    <string name="text_country">Kenya</string>
    <string name="text_website">thomaskioko.com</string>
    <string name="text_date">November 2011</string>
    <string name="text_following_count">934</string>
    <string name="text_following">Following</string>
    <string name="text_followers_number">2,456</string>
    <string name="text_followers">Followers</string>
    <string name="text_twitter">Twitter</string>
    <string name="text">Cool Name</string>
    <string name="text_description">A once loyal father and chemistry teacher, Walter White, turns to a life of crime due to developing stage 3 terminal lung cancer. ... Breaking Bad follows protagonist Walter White, a chemistry teacher who lives in New Mexico with his wife and teenage son who has cerebral palsy.</string>
    <string name="tv_movie_title">Breaking Bad(Tv Series 2008 - 2013)</string>
    <string name="text_comment_number">748</string>
    <string name="tv_ep_description">A once loyal father and chemistry teacher, Walter White, turns to a life of crime due to developing stage 3 terminal lung cancer</string>
    <string name="text_ep_title">Season 5 Ep 16</string>
    <string name="tv_ep_name">Felina</string>
    <string name="tv_ep_duration">46:24</string>
    <string name="tv_ep_title">S05 Ep16 Granite State</string>
    <string name="tv_rating">4.3/5</string>

</resources>
