<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        android:background="@drawable/fondo_degrade">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <ProgressBar
                android:id="@+id/barra_estadistica"
                android:indeterminate="false"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:progress="65"
                android:progressDrawable="@drawable/barra_progreso"
                android:background="@drawable/circle_shape"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/mensaje_saldo"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:padding="12dp"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/primary_text"
                    android:text="@string/mensaje_estadoCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/icon_informes"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:padding="12dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary_text"
                        android:text="Aplicación para registrar transacciones"
                        android:layout_width="0dp"
                        android:layout_weight="9"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/espacio_mediano"/>

                </LinearLayout>

                <TextView
                    android:padding="12dp"
                    android:textSize="13sp"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_marginTop="12dp"
                    android:text="@string/descripcion_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_settings"
        app:backgroundTint="@color/colorAccent"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>